--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8000
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 #spring.datasource.platform=postgres
